--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "description": "API para gestionar mis pokemon favoritos",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --env-file=.env index.js",
+    "dev": "nodemon --env-file=.localenv index.js",
     "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "gitignore": "^0.7.0",
-    "mysql2": "^3.13.0"
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.13.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
